--- a/styles/style.scss
+++ b/styles/style.scss
@@ -77,7 +77,8 @@ img {
 .card-title {
   font-family: 'Big Shoulders Display', cursive;
   color: $v-light-gray;
-  padding: 10px 0 20px;
+  padding: 1rem 0 2rem;
+  text-transform: uppercase;
   transform-origin: left;
 }
 
