--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap");
-
 * {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
@@ -36,7 +35,7 @@ img {
 .card {
   width: 100%;
   -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
+          transform-style: preserve-3d;
   -padding: 1.5rem;
   padding: var(--padding);
 }
@@ -108,16 +107,13 @@ img {
   color: #f2f2f2;
 }
 
-.card-header {
-  padding: 15px 0 0;
-}
-
 .card-title {
   font-family: 'Big Shoulders Display', cursive;
   color: #f2f2f2;
-  padding: 10px 0 20px;
+  padding: 1rem 0 2rem;
+  text-transform: uppercase;
   -webkit-transform-origin: left;
-  transform-origin: left;
+          transform-origin: left;
 }
 
 .attribution {
@@ -134,21 +130,18 @@ img {
   section {
     margin: 10px 0;
   }
-
   .container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
-
   .card-footer {
     margin: 2rem 0;
   }
-
   .card {
     padding: 3rem 3rem 1rem;
   }
@@ -158,19 +151,16 @@ img {
   .container {
     height: 60vh;
     -webkit-transform: translateY(25%);
-    transform: translateY(25%);
+            transform: translateY(25%);
   }
-
   .card-footer {
     margin: 5rem 0 2rem;
     position: absolute;
     bottom: 3rem;
   }
-
   .card {
     padding: 3rem;
   }
-
   .attribution {
     position: absolute;
     bottom: 0;
@@ -178,5 +168,4 @@ img {
     right: 0;
   }
 }
-
 /*# sourceMappingURL=style.css.map */
